# The-Visualizer

./: .gitignore  Codebase_Analyzer_Plan.md  FUTURE_UPGRADES.md  README.md  pyproject.toml  requirements.txt
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
tests/mock_fastapi_app/: database.py  main.py  services.py
tests/output/: dependencies.dot  dependencies.json
tests/output/diagrams/: create_user_1.md  read_root_0.md
the_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
visualizer/: __init__.py  __main__.py  cli.py  models.py  server.py
visualizer/generators/: __init__.py  graph_gen.py  mermaid_gen.py
visualizer/parser/: __init__.py  dependency_analyzer.py  flow_tracer.py  route_detector.py
visualizer/scanner/: __init__.py  project_scanner.py
