[project]
name = "the-visualizer"
version = "0.1.0"
description = "A visualizer for FastAPI codebases."
authors = [{name = "Developer"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0"
]

[project.scripts]
visualizer = "visualizer.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["visualizer"]
